Worker process (#3)
* Added Scheduler Daemon

* Fixed Interval next run time bug and schedules page refresh
