# GardenControlUI/OpenAPIs/swagger.json
@@ -1815,6 +1815,43 @@
         }
       }
     },
+    "/api/Schedule/{id}/Run": {
+      "get": {
+        "tags": [
+          "Schedule"
+        ],
+        "operationId": "ScheduleRunNowById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/Schedule/RunPendingSchedules": {
+      "get": {
+        "tags": [
+          "Schedule"
+        ],
+        "operationId": "SchedulesRunPending",
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/ScheduleTask": {
       "get": {
         "tags": [
